# pyarrow_dataset

./: .gitignore  pyproject.toml
data/cifs/: CrO2.cif  Cs2Pd(IBr2)2.cif  Cu3Ge.cif  Hg(CO2)2.cif  LiF.cif  Nd(CuGe)2.cif  PrVO4.cif  Th(MnSi)2.cif  U3O8.cif
data/large_ds/: readme.txt
scrips/: large_ds.py  lazyload_test.py  serialize_structures.py
src/pyarrow_dataset/: __init__.py  create_dataset.py  lazy_dataset.py  lazy_split.py  structure_serialization.py  utils.py
