[project]
name = "pyarrow-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jona", email = "jona.oestreicher@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "psutil>=7.0.0",
    "pyarrow>=19.0.1",
    "pymatgen>=2025.3.10",
    "torch>=2.6.0",
]

[project.scripts]
pyarrow-dataset = "pyarrow_dataset:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
